# provogen

./: LICENSE  README.md  pyproject.toml  requirements.txt
provogen/: __init__.py
provogen/static/scripts/: colorhandling.js  textresize.js
provogen/static/styles/: provogen.css
provogen/templates/: provogen.j2
