[tool.poetry]
name = "provogen"
version = "0.1.0"
description = "A website that creates stupid flags"
authors = ["AlDacMac <alasdairmacgdev@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
flaggart = "^0.4.0"
Wand = "^0.6.7"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
